--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "dialogflow": "^1.1.1",
+    "pg": "8.0.2",
     "body-parser": "^1.18.3",
     "@line/bot-sdk": "^7.0.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "got": "^11.3.0",
